--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "axios": "^1.7.7",
     "next": "14.2.16",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
